Fix left alignment

--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -833,7 +833,7 @@ a.social-icon {
 		}
 	}
 	.opener {
-		margin: 0 auto;
+		margin-right: auto;
 		max-width: 650px;
 	}
 }
